# CritterGOD2

./: .coverage  AGENTS.md  ARCHITECTURE.md  CRITTERDING2_ANALYSIS.md  CRITTERGOD4_ANALYSIS.md  CRITTERS_CODEBASE.md  DISCOVERY.md  FLAMOOT_DISCOVERIES_SYNTHESIS.md  GPU_QUICKSTART.md  GPU_SETUP.md  NETENTION_ANALYSIS.md  PHASE10A_COMPLETE.md  PHASE10B_GPU_COMPLETE.md  PHASE10C_COMPLETE.md  PHASE10_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_AUDIO_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_MARKOV_COMPLETE.md  PHASE4_VISUAL_COMPLETE.md  PHASE5A_COMPLETE.md  PHASE5C_COMPLETE.md  PHASE6_COMPLETE.md  PHASE9A_COMPLETE.md  PHASE9B_COMPLETE.md  PHASE9C_COMPLETE.md  PHASE9C_PSYCHOPHARMACOLOGY.md  QUICKSTART.md  README.md  SPACENET_ANALYSIS.md  SYSTEM_AUDIT.md  TRIBUTE.md  kroger_api_client.py  pyproject.toml  requirements.txt  run_platform.sh  setup_kroger_env.sh  test_font_simple.py
config/: __init__.py  loader.py  schema.py
core/: __init__.py  population_manager.py
creatures/: __init__.py  audio_mixin.py  behavioral_creature.py  collective_creature.py  creature.py  creature_motors.py  creature_senses.py  enhanced_creature.py  genetic_language.py  morphological_creature.py  physics_creature.py  psychedelic_mixin.py  sensory_mixin.py  ultimate_creature.py
examples/: audio_synthesis_demo.py  config_demo.py  evolution_demo.py  evolutionary_ecosystem.py  gpu_benchmark.py  gpu_research_platform.py  markov_demo.py  multi_modal_demo.py  phase10a_demo.py  phase5a_demo.py  phase5b_demo.py  phase5c_demo.py  phase7_3d_integrated.py  phase7_complete.py  phase8_3d_demo.py  phase9a_demo.py  (+13 more)
(+84 files in other folders)
